--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
 
-	<form action="https://formsubmit.co/chizzymartin98@gmail.com" method="POST">
+	<form action="https://formsubmit.co/a4cf5bb69988f2e0280326c5a10336b0" method="POST">
 			<input type="text" name="name" placeholder="name" required>
 			<input type="email" name="email" placeholder="email" required>
 			<button type="submit">Send</button>
