--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<form action="https://formsubmit.co/a4cf5bb69988f2e0280326c5a10336b0" method="POST">
 			<input type="text" name="name" placeholder="name" required>
 			<input type="email" name="email" placeholder="email" required>
+			<input type="hidden" name="_next" value="https://leafy-faloodeh-4b1451.netlify.app/secpage.html">
 			<button type="submit">Send</button>
 			</form> 
 </body>
