--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 			<input type="text" name="name" placeholder="name" required>
 			<input type="email" name="email" placeholder="email" required>
 			<input type="hidden" name="_next" value="https://leafy-faloodeh-4b1451.netlify.app/secpage.html">
+			<input type="hidden" name="_captcha" value="false">
 			<button type="submit">Send</button>
 			</form> 
 </body>
